EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
== 09/21/2014 == 
Akkadius: Player Profile Blob to Database Conversion
	- Summary: HUGE difference in database speeds reads/writes and 1:10 datasize difference
		- The new character storage engine unlike the character_ table before, is able to properly index data and make use of 
			proper MySQL/MariaDB caching optimizations and performance has increased phenominally
		PERFORMANCE AND STATISTICS FIGURES (Varies on hardware):
		- EZ Server Character data size of 2.6GB `character_` table alone now takes up approx 600MB
		- Character Data Loads take approx .03 seconds BEFORE MySQL/MariaDB cache
		- Character Data Loads take approx .001-.0035 seconds AFTER MySQL/MariaDB cache
		- Character Data Saves take approx .0001 - .003 for any particular save operation
		- Database Auto Conversion: When the 'character_' table exists, World boot-up will queue an auto-conversion prompt and convert all of your characters, BACKUP
			YOUR DATABASE BEFORE CONVERTING, here is an EASY backup script: http://wiki.eqemulator.org/p?MySQL_DB_Backup_Script
			- On auto conversion, the following tables are created automatically:
				- Table: `character_skills` - Stores Character Skills
				- Table: `character_languages` - Stores Character Language
				- Table: `character_bind` - Stores Character Bind point and Home Bind point designated by is_home bool field
				- Table: `character_alternate_abilities` - Stores all Character AA
				- Table: `character_currency` - Stores all Platinum/Gold/Silver/Copper and character related currencies
				- Table: `character_data` - Stores basic character data (Fields from `character_` table migrated to this table)
				- Table: `character_spells` - Stores character spells
				- Table: `character_memmed_spells` - Stores character memorized spells
				- Table: `character_disciplines` - Stores character disciplines